--- a/components/NotionTypes/Text/Paragraph/paragraph.module.css
+++ b/components/NotionTypes/Text/Paragraph/paragraph.module.css
@@ -4,7 +4,6 @@
     line-height: 1.4;
     color: #1e2841;
     margin: .9em auto;
-    padding-left: 4px;
     opacity: 0.9;
 }
 
